@@ -1,3 +1,9 @@
+2000-08-24  Denis Chertykov  <denisc@overta.ru> & Nick Clifton  <nickc@redhat.com>
+
+	* elflink.h (elf_link_add_object_symbols): Allow common
+	symbols to have an alignment of 1 if explicitly requested, and
+	not overridden by other definitions.
+
 2000-08-22  Doug Kwan <dkwan@transmeta.com>
 
 	* coff-w65.c (CREATE_LITTLE_COFF_TARGET): Fix typo.
